--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Wallify</string>
     <string name="action_save">Save</string>
+    <string name="title_activity_settings">SettingsActivity</string>
 </resources>
