--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Wallify</string>
     <string name="action_save">Save</string>
     <string name="title_activity_settings">SettingsActivity</string>
+    <string name="app_description">A randomized wallpaper app</string>
+    <string name="github">GitHub</string>
+    <string name="github_link">https://github.com/SubhrajyotiSen/Wallify</string>
 </resources>
