fix: rewrite permission code
This implementation removes bugs of the previous module

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="app_description">A randomized wallpaper app</string>
     <string name="github">GitHub</string>
     <string name="github_link">https://github.com/SubhrajyotiSen/Wallify</string>
+    <string name="no_permission">External Storage permission not granted</string>
 </resources>
