--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="restore_wallpaper">Restore wallpaper</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
+    <string name="restore_success">Wallpaper restored successfully</string>
+    <string name="restore_error">Error while restoring wallpaper</string>
 </resources>
