fix: crash when trying to restore wallpaper on first launch

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="close">Close</string>
     <string name="restore_success">Wallpaper restored successfully</string>
     <string name="restore_error">Error while restoring wallpaper</string>
+    <string name="no_restore">No wallpaper to restore</string>
 </resources>
