--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="restore_success">Wallpaper restored successfully</string>
     <string name="restore_error">Error while restoring wallpaper</string>
     <string name="no_restore">No wallpaper to restore</string>
+    <string name="favourite">Favourite</string>
 </resources>
