--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,12 +15,11 @@
     <string name="settings">Settings</string>
     <string name="navigationbar_header_image">NavigationBar Header image</string>
     <string name="downloads">Downloads</string>
-    <string name="favourites">Favourites</string>
     <string name="restore_wallpaper">Restore wallpaper</string>
     <string name="open">Open</string>
     <string name="close">Close</string>
     <string name="restore_success">Wallpaper restored successfully</string>
     <string name="restore_error">Error while restoring wallpaper</string>
     <string name="no_restore">No wallpaper to restore</string>
-    <string name="favourite">Favourite</string>
+    <string name="gallery_image_cell">gallery image cell</string>
 </resources>
