--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,6 @@
     <string name="no_restore">No wallpaper to restore</string>
     <string name="gallery_image_cell">gallery image cell</string>
     <string name="full_screen_image">full screen image</string>
+    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
+
 </resources>
